# cpa-feup

./: CMakeLists.txt
ex1/: CMakeLists.txt  report.md
ex1/src/: matrix_mult.cpp  matrix_mult_original.cpp
ex1/src/gpt/: gpt.cpp
ex2/: CMakeLists.txt  runner.py  sieve_parallel.cpp  sieve_parallel_tasks.cpp  sieve_seq.cpp
ex2/results/: par.csv  seq1.csv  seq2.csv  seq3.csv
ex3/: aux.cpp  cannon.cpp  prog  summa  summa.cpp  summa_a.cpp  summa_original.cpp  summa_square_matrices.c
papi_helper/: CMakeLists.txt  papi_helper.cpp  papi_helper.h
